syntax = "proto3";

package postservice;

option go_package = "./gen";

service PostService {
  rpc CreatePost(PostCreateData) returns (PostCreateResponse);
  rpc GetPost(PostGetData) returns (PostGetResponse);
  rpc UpdatePost(PostUpdateData) returns (PostUpdateResponse);
  rpc DeletePost(PostDeleteData) returns (PostDeleteResponse);
  rpc ListPosts(ListPostsData) returns (ListPostsResponse);
}

message Post {
  string id = 1;
  string title = 2;
  string description = 3;
  string creatorId = 4;
  string createdAt = 5;
  string updatedAt = 6;
  bool isPrivate = 7;
  repeated string tags = 8;
}

message PostCreateData {
  string title = 1;
  string description = 2;
  string creatorId = 3;
  bool isPrivate = 4;
  repeated string tags = 5;
}

message PostCreateResponse {
  string id = 1;
}

message PostGetData {
  string id = 1;
  string creatorId = 2;
}

message PostGetResponse {
  Post post = 1;
}

message PostUpdateData {
  string id = 1;
  string title = 2;
  string description = 3;
  string creatorId = 4;
  bool isPrivate = 5;
  repeated string tags = 6;
}

message PostUpdateResponse {
  bool success = 1;
}

message PostDeleteData {
  string id = 1;
  string creatorId = 2;
}

message PostDeleteResponse {
  bool success = 1;
}

message ListPostsData {
  int32 page = 1;
  int32 limit = 2;
  string creatorId = 3;
}

message ListPostsResponse {
  repeated Post posts = 1;
}